# prodigy-lunr

./: .gitignore  README.md  setup.cfg  setup.py
.github/: unit_tests.yml
.github/workflows/: unit_tests.yml
prodigy_lunr/: __init__.py  util.py
tests/: e2e_util.py  test_basics.py  test_e2e.py
tests/datasets/: index.gz.json
