[metadata]
version = 0.0.2
description = Recipes for PDF annotation
url = https://github.com/explosion/prodigy-pdf
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    lunr==0.7.0

[options.entry_points]
prodigy_recipes =
    ann.text.index = prodigy_lunr:index
    ann.text.fetch = prodigy_lunr:fetch
    textcat.ann.manual = prodigy_lunr:textcat_ann_manual
    ner.ann.manual = prodigy_lunr:ner_ann_manual
    spans.ann.manual = prodigy_lunr:spans_ann_manual

[bdist_wheel]
universal = true

[sdist]
formats = gztar
