[metadata]
version = 0.0.2
description = Recipes for PDF annotation
url = https://github.com/explosion/prodigy-pdf
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    lunr==0.7.0

[options.entry_points]
prodigy_recipes =
    lunr.text.index = prodigy_lunr:index
    lunr.text.fetch = prodigy_lunr:fetch
    textcat.lunr.manual = prodigy_lunr:textcat_lunr_manual
    ner.lunr.manual = prodigy_lunr:ner_lunr_manual
    spans.lunr.manual = prodigy_lunr:spans_lunr_manual

[bdist_wheel]
universal = true

[sdist]
formats = gztar
